# Loom

./: .gitignore  COPYRIGHT  Cargo.toml  FABRICOS_V8_INTEGRATION.md  FIBER_WORK_LOOP.md  LICENSE  README.md  ROADMAP.md  TECHNICAL_DEBT.md  baseline_report_l29.md  link.x  rustc-ice-2026-03-04T07_08_52-10147.txt  rustc-ice-2026-03-04T07_09_20-10198.txt  rustc-ice-2026-03-04T14_32_21-14395.txt  rustc-ice-2026-03-04T14_46_25-15091.txt
.cargo/: config.toml
app/: README.md  index.ts  package.json
app/components/: ConciergeOverlay.css  ConciergeOverlay.tsx  index.ts
app/hooks/: index.ts  useConciergeStream.ts
app/store/: concierge.ts  index.ts
app/utils/: historyCompression.ts  index.ts
crates/loom-ai/: Cargo.toml
crates/loom-ai/src/: agent.rs  chrome.rs  intent.rs  lib.rs  voice.rs
crates/loom-bench/: Cargo.toml
crates/loom-bench/src/: baseline.rs  fps_counter.rs  lib.rs
crates/loom-chrome/: Cargo.toml
crates/loom-chrome/src/: animations.rs  chrome.rs  lib.rs  mode.rs
crates/loom-content/: Cargo.toml
crates/loom-content/src/: extract.rs  fetch.rs  html.rs  http.rs  lib.rs  transform.rs
crates/loom-core/: Cargo.toml
crates/loom-core/src/: color.rs  geometry.rs  lib.rs  text.rs
crates/loom-js/: Cargo.toml
crates/loom-js/src/: engine.rs  lib.rs
crates/loom-js/src/fabricos_v8/: engine.rs  ffi.rs  mod.rs
crates/loom-js/tests/: fabricos_v8_integration.rs
crates/loom-layout/: Cargo.toml
crates/loom-layout/src/: css_types.rs  dom.rs  forms.rs  layout.rs  layout_engine.rs  lib.rs  style.rs  style_engine.rs
crates/loom-media/: Cargo.toml
crates/loom-media/src/: audio.rs  hw_accel.rs  lib.rs  video.rs
crates/loom-render/: Cargo.toml
crates/loom-render/examples/: fiber_demo.rs
crates/loom-render/src/: ai_mode_transition.rs  benchmark.rs  lib.rs  primitives.rs  profiler.rs  renderer.rs  text.rs  work_loop.rs
crates/loom-render/src/fiber/: mod.rs  scheduler.rs  work_loop.rs
crates/loom-render/tests/: performance_60fps.rs
crates/loom-security/: Cargo.toml
crates/loom-security/src/: csp.rs  iframe.rs  lib.rs  permissions.rs  referrer.rs  sentinel.rs
crates/loom-webgl/: Cargo.toml
crates/loom-webgl/src/: buffer.rs  context.rs  lib.rs  pipeline.rs  shader.rs  shader.wgsl  texture.rs
design/: README.md  index.html
design/src/app/: App.tsx
design/src/app/components/: AddressBar.tsx  ContentPane.tsx  LoomAnimation.tsx  NavigationToolbar.tsx  SettingsPanel.tsx  TabBar.tsx  ThreadPulse.tsx
design/src/styles/: fonts.css  theme.css
kernel/: Cargo.toml  README.md
kernel/src/: lib.rs
kernel/src/v8_platform/: io.rs  memory.rs  mod.rs  stubs.rs  test_main.rs  threads.rs  time.rs
src/: lib.rs  main.rs
src/os/: fabricsys.rs  mod.rs
