[package]
name = "loom"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Loom Team"]
description = "A Rust-native browser with AI-assisted and Traditional modes"
license = "GPL-3.0"
repository = "https://github.com/Obelus-Labs-LLC/Loom"

[workspace]
members = [
    "crates/loom-core",
    "crates/loom-layout",
    "crates/loom-media",
    "crates/loom-js",
    "crates/loom-security",
    "crates/loom-chrome",
    "crates/loom-render",
    "crates/loom-content",
]
resolver = "2"

[features]
default = ["std"]
std = ["loom-core", "glam"]

# Dependencies only needed for std/desktop mode
[dependencies]
glam = { version = "0.25", default-features = false, features = ["libm"], optional = true }

# Workspace crates
loom-core = { path = "crates/loom-core", default-features = false, optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
