[package]
name = "loom"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Loom Team"]
description = "A Rust-native browser with AI-assisted and Traditional modes"
license = "GPL-3.0"
repository = "https://github.com/Obelus-Labs-LLC/Loom"

[workspace]
members = [
    "crates/loom-core",
    "crates/loom-layout",
    "crates/loom-media",      # TD-019: FIXED - dependency API drift resolved
    # "crates/loom-js",         # TD-017: Boa API drift, excluded temporarily
    "crates/loom-security",   # TD-020: FIXED
    "crates/loom-chrome",
    "crates/loom-render",
    "crates/loom-content",    # TD-021: FIXED
    "crates/loom-webgl",      # TD-018: FIXED - wgpu API changes resolved
    "crates/loom-ai",
    "crates/loom-devtools",
    "crates/loom-extensions",
    "crates/loom-wasm",       # L24: WebAssembly runtime (no_std)
    "crates/loom-serviceworker", # L25: Service Workers (no_std)  
    "crates/loom-webrtc",     # L27: WebRTC peer-to-peer (no_std)
    "crates/loom-a11y",
]
resolver = "2"

[features]
default = ["std"]
std = ["loom-core", "glam"]

# Dependencies only needed for std/desktop mode
[dependencies]
glam = { version = "0.25", features = ["bytemuck"], optional = true }

# Workspace crates
loom-core = { path = "crates/loom-core", default-features = false, optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
