[package]
name = "loom-ai"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Loom Team"]
description = "AI-Native mode for Loom browser - intent parsing and agent integration"
license = "GPL-3.0"

[features]
default = ["std"]
std = []

[dependencies]
loom-core = { path = "../loom-core", default-features = false, features = ["std"] }
loom-layout = { path = "../loom-layout", default-features = false, features = ["std"] }

# Natural language processing (lightweight)
regex = { version = "1.10", default-features = false, features = ["unicode-perl"] }

# URL parsing
url = { version = "2.5", default-features = false }

# Serialization (no_std compatible)
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }

# Error handling
anyhow = "1.0"
thiserror = { version = "1.0", default-features = false }

# Logging
log = "0.4"

# Async runtime
futures = { version = "0.3", default-features = false }

[dev-dependencies]
tokio = { version = "1.0", features = ["rt", "macros"] }
