[package]
name = "loom-js"
version = "0.3.0-L23"
edition = "2021"
rust-version = "1.75"
authors = ["Loom Team"]
description = "JavaScript engine for Loom browser - Boa (AI-Native) and V8 (Traditional)"
license = "GPL-3.0"

[dependencies]
loom-core = { path = "../loom-core" }
loom-layout = { path = "../loom-layout" }

# Boa JavaScript engine (AI-Native mode)
boa_engine = { version = "0.17", optional = true }
boa_gc = { version = "0.17", optional = true }
boa_runtime = { version = "0.17", optional = true }

# V8 JavaScript engine (Traditional mode)
v8 = { version = "0.89", optional = true }

# Async runtime for fetch stub
futures = { version = "0.3", optional = true }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
log = "0.4"

# Hash map
hashbrown = "0.14"

[features]
default = ["std", "boa-engine"]
std = []
boa-engine = ["boa_engine", "boa_gc", "boa_runtime", "futures"]
v8-engine = ["v8", "futures"]

[build-dependencies]
# V8 build tools if needed

[dev-dependencies]
anyhow = "1.0"
