[package]
name = "loom-media"
version = "0.2.5-L16.5"
edition = "2021"
rust-version = "1.75"
authors = ["Loom Team"]
description = "Media playback for Loom browser - video, audio, and images"
license = "GPL-3.0"

[features]
default = ["std", "video", "audio"]
std = ["loom-core/std", "png", "jpeg-decoder", "webp", "symphonia", "rav1d"]
video = ["rav1d"]
audio = ["symphonia"]

[dependencies]
loom-core = { path = "../loom-core", default-features = false }

# Image decoding (std only)
png = { version = "0.17", optional = true }
jpeg-decoder = { version = "0.3", optional = true }
webp = { version = "0.3", optional = true }

# Audio decoding with Symphonia
symphonia = { version = "0.5", optional = true, features = ["mp3", "aac", "flac", "wav", "vorbis"] }

# Video decoding - AV1 with rav1d (pure Rust)
rav1d = { version = "0.1", optional = true }

# H.264 decoding (alternative/backup)
# openh264 = { version = "0.5", optional = true }

# Common utilities
log = "0.4"
hashbrown = { version = "0.14", default-features = false }

# Threading for async decode
crossbeam-channel = { version = "0.5", default-features = false }

# Error handling
thiserror = { version = "1.0", default-features = false }

# Hardware acceleration
wgpu = { version = "0.19", optional = true }
num_cpus = { version = "1.16", optional = true }

[features]
default = ["std", "video", "audio", "hwaccel"]
std = ["loom-core/std", "png", "jpeg-decoder", "webp", "symphonia", "rav1d", "wgpu", "num_cpus"]
video = ["rav1d"]
audio = ["symphonia"]
hwaccel = ["wgpu", "num_cpus"]

[dev-dependencies]
anyhow = "1.0"
